Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
ReactOS revision 62032
Description
On ReactOS, download RosBE 2.1, checkout ReactOS source, configure a build (using ninja by default) and then start to build the host-tools.
At some point, the build will fail with the error:
"gcc.exe: error: CreateProcess: No such file or directory (ENOENT)"
|
whereas in the debug log you will obtain:
(../../ntoskrnl/mm/ARM3/mdlsup.c:738) MDL PROBE FAILED!
|
(../../dll/win32/kernel32/client/proc.c:881) Failure to create process parameters: 8000000d
|
(../../dll/win32/kernel32/client/proc.c:4138) BasePushProcessParameters failed
|
The error 0x8000000d being STATUS_PARTIAL_COPY.
I've started to check what failed in BasePushProcessParameters, and I've noticed that for whatever reason the following call (line 691+ in kernel32/client/proc.c):
/* Write the Environment Block */ |
Status = NtWriteVirtualMemory(ProcessHandle,
|
ProcessParameters->Environment,
|
lpEnvironment,
|
EnviroSize,
|
NULL);
|
fails.
This is somewhat a blocker for being able to have a self-contained ReactOS.